# claudIA

./: .gitignore  AGENTS.md  README.md  pyproject.toml
claudia/: __init__.py  app.py  bridge.py  catalog.py  cli.py  constants.py  launcher.py  litellm_config.py  oauth.py  paths.py  preflight.py  providers.py  proxy.py  secrets.py  settings_proxy.py  state.py
tests/: test_catalog.py  test_credential_screen.py  test_launcher_state.py  test_litellm_config.py  test_oauth.py  test_preflight.py  test_providers.py
